lintian-brush (0.80) UNRELEASED; urgency=medium

  * Fix changelog update detection when running lintian-brush in shallow
    git repositories.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 25 Sep 2020 14:34:27 +0000

lintian-brush (0.79) unstable; urgency=medium

  * Add fixer for papt-dpmt-merged.
  * Add fixers for old-dpmt-vcs and old-papt-vcs.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 25 Sep 2020 14:12:49 +0000

lintian-brush (0.78) unstable; urgency=medium

  * Support creating patches to upstreams in the case when there are no
    existing upstream patches.
  * Depend on newer debmutate (>= 0.6).
  * When removing lintian overrides, also drop the associated comments.
  * In control files, don't create new empty lines when stripping
    whitespace.
  * Bump default urgency to medium. See
    https://salsa.debian.org/jelmer/debian-janitor/-/issues/138
  * Fix branch from vcswatch in --diligent mode.
  * apply-multiarch-hints: fix Changes-by field.
  * debianize: Make breezy-debian optional.
  * Add debianize(1) manpage.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 19 Sep 2020 18:01:20 +0000

lintian-brush (0.77) unstable; urgency=medium

  [ Jelmer Vernooĳ ]
  * Scan for 'fossil clone' commands in README.
  * Add debhelper compat versions for some more ubuntu releases.

  [ Edwards Betts ]
  * Correct several spelling mistakes.

  [ Jelmer Vernooĳ ]
  * Add --scan option to guess-upstream-metadata.
  * Convert debian/upstream/metadata with multiple documents to a single
    document.
  * Add fixer field-name-typo-in-upstream-metadata.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 07 Sep 2020 22:26:31 +0000

lintian-brush (0.76) unstable; urgency=medium

  * Add some notes about debugging fixer scripts to manual page.
  * empty-debian-tests-control: Cope with NotADirectory errors.
  * Handle spacing around field names in Yaml files.
  * field-name-typo-in-dep5-copyright: Rename X- fields where
    appropriate in debian/copyright.